termino implentación grafo dirigido